--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.1
 asyncpg==0.31.0
+bcrypt==3.2.0
+cffi==2.0.0
 click==8.3.1
 fastapi==0.128.2
 greenlet==3.3.1
@@ -11,11 +13,14 @@ h11==0.16.0
 idna==3.11
 Mako==1.3.10
 MarkupSafe==3.0.3
+passlib==1.7.4
+pycparser==3.0
 pydantic==2.12.5
 pydantic-settings==2.12.0
 pydantic_core==2.41.5
 PyMySQL==1.1.2
 python-dotenv==1.2.1
+six==1.17.0
 SQLAlchemy==2.0.46
 starlette==0.50.0
 typing-inspection==0.4.2
